Fix post layout on mobile having the wrong header style

--- a/css/base.scss
+++ b/css/base.scss
@@ -70,7 +70,7 @@ body > * {
     padding: 1em 0;
 }
 
-header {
+body > header {
     border-top: 0;
     margin-bottom: 0;
     > h1 {
@@ -180,7 +180,7 @@ a {
 
 }
 
-nav {
+#page > nav {
     ul {
     padding: 0; }
     li:first-child {
@@ -205,7 +205,7 @@ nav {
 
 
 
-footer {
+body > footer {
     border-bottom: 0;
     > p {
         font-size: 0.9em;
